--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,20 +9,27 @@
 <body>
 	<header>
 		<div class="col-xs-3">
-			LOGO
+			<div class="circle">
+				<br />
+				Local
+				<br />
+				PGHese
+				<br />
+				n@
+			</div>
 		</div>
-		<div class="col-xs-4">
+		<div class="col-xs-4 slogan">
 			Splurting Pittsburghese since 2014
 		</div>
-		<div class="col-xs-5">
+		<div class="col-xs-5 links">
 			<%= link_to 'Contribute', '#' %>
 			<%= link_to 'About', '#' %>
 		</div>
 
 	</header>
-
+<hr />
   <br class="clear" />
-  
+
 <%= yield %>
 
 </body>
