--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -30,6 +30,7 @@
 
 .links {
   padding-top:26px;
+  padding-left:26px;
 }
 
 .links a {
@@ -44,4 +45,16 @@ header {
 
 hr {
   clear:both;
+}
+
+h1 {
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-weight: 600;
+  letter-spacing: -1.5px;
+}
+
+h2 {
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-weight: 600;
+  letter-spacing: -1.5px;
 }
