--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to my Awesome Web App</h1>
+You know you've been in Pittsburgh too long when: 
 
-<h2><%= @quote.saying %></h2>
+<h1><%= @quote.saying %></h1>
 <h2>- <%= @quote.author %></h2>
