Added Create Path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 			Splurting Pittsburghese since 2014
 		</div>
 		<div class="col-xs-5 links">
-			<%= link_to 'Contribute', '#' %>
+			<%= link_to 'Contribute', new_quote_path %>
 			<%= link_to 'About', '#' %>
 		</div>
 
@@ -37,7 +37,7 @@
 <div class="footer">
 	<div class="container">
 		<div class="col-xs-6">
-			<%= link_to "See another", new_quote_path, :class => 'next-quote' %>
+			<%= link_to "See another", "#", :class => 'next-quote' %>
 		</div>
 		<div class="col-xs-6 footer-blurb">Proudly built in Pittsburgh's East End
 		</div>
